- unscope(:order) in calculate_query (for rails >= 4)
- clean code and follow ruby style guide
- deny_access (rescue method for ActiveScaffold::RecordNotAllowed, ActiveScaffold::ActionNotAllowed) render with status :forbidden (403) instead of 401
- allow to load nested scaffold with nested through associations, even with inplace edit enabled

= 3.4.17
- Fix deprecation warning "Extra .css in SCSS file is unnecessary"
- Improve support for namespaced models on namespaced controllers with different namespace

= 3.4.16
- add scoped_query to list methods, so it can be used for calculations, like each_record_in_scope is used to iterate over every filtered record
- fix field_search_ignore? and search_ignore?
- fix reset on search forms loaded with session search

= 3.4.14
- fix filter order in AS controllers which inherit from AS controllers
- clean code

= 3.4.13
- fix parent_prefixes deprecation on rails 4.2
- set parent record on add existing
- add record_select_params_for_add_existing to allow to set params on record select browse url, so add existing records are filtered
- fix search with date and boolean columns on rails 4.2
- fix cache association for has many through
- move handle_user_settings and check_input_device filters to Actions::Core so filters are not added to ActionController::Base, see cb2fabd
- allow to use search and field_search without AJAX
- allow to remove reset button in search and field_search

= 3.4.12
- Workaround for counter_cache bug on polymorphic associations on rails4
- Improve use of CRUD actions without list action

= 3.4.11
- Fix refresh-link on main form (not subform)
- Workaround for counter_cache bug on rails4 (https://github.com/rails/rails/pull/14849)
- Support create form on nested scaffolds on through association, if through reflection association is included in create form
- Remove ruby 1.8 support
- Fix :index member route (list one item), broken on 3.4.9

= 3.4.10