@@ -94,11 +94,14 @@ module ActiveScaffold::DataStructures
     end
 
     # A through association with has_one or has_many as source association
-    # create cannot be called in such through association, unless create columns include through reflection of reverse association
+    # create cannot be called in nested through associations, and not-nested through associations
+    # unless create columns include through reflection of reverse association
     # e.g. customer -> networks -> firewall, reverse is firewall -> network -> customer,
     # firewall can be created if create columns include network
     def readonly_through_association?(columns)
-      through_association? && association.source_reflection.macro != :belongs_to && (
+      return false unless through_association?
+      return true if association.through_reflection.options[:through]
+      association.source_reflection.macro != :belongs_to && (
         !child_association || !columns.include?(child_association.through_reflection.name)
       )
     end
